# ezgi

./: .gitignore  GEMINI_SETUP.md  README.md
backend/: pyproject.toml
ezgi/: index.html  package-lock.json  package.json
ezgi/src/: App.css  App.tsx  main.tsx
ezgi/src/components/: FloatingGenerateButton.tsx  MinimalChatBot.tsx  MobileWarning.tsx
ezgi/src/services/: musicAnalyzer.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: FloatingChat.tsx  FloatingControls.tsx  FloatingGenerateButton.tsx  MIDIEditor.tsx  MinimalChatBot.tsx  PlaybackControls.tsx
frontend/src/components/Layout/: AIDialog.tsx  BottomControls.tsx  GeneratePopup.tsx  MIDIEditor.tsx  MainLayout.tsx  TopControls.tsx
frontend/src/services/: geminiService.ts  musicAnalyzer.ts
