[tool.poetry]
package-mode = false

[project]
name = "ezgi"
version = "0.1.0"
description = "music-making and music theory learning app"
authors = [
    {name = "tabibyte"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "pretty-midi (>=0.2.10,<0.3.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "ruff (>=0.12.1,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
